--- a/rtl/sinclairql/Makefile.fpc
+++ b/rtl/sinclairql/Makefile.fpc
@@ -11,7 +11,7 @@ units=$(SYSTEMUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) buildrtl cpall
 # $(EXTPASUNIT) $(MACPASUNIT)
 implicitunits=si_prc \
       ctypes rtlconsts $(STRINGSUNIT) \
-      sortbase $(CHARSETUNIT) fpwidestring \
+      $(SORTBASEUNIT) $(CHARSETUNIT) fpwidestring \
       cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
       cp437 cp646 cp737 cp775 cp850 cp852 cp855 cp856 cp857 cp860 cp861 cp862 \
       cp863 cp864 cp865 cp866 cp869 cp874 cp3021 cp8859_1 cp8859_2 cp8859_3 cp8859_4 \
