--- a/rtl/win16/Makefile.fpc
+++ b/rtl/win16/Makefile.fpc
@@ -7,8 +7,8 @@ main=rtl
 loaders=prt0s prt0m prt0c prt0l prt0h 
 units=system $(UUCHARUNIT) $(OBJPASUNIT) $(STRINGSUNIT) $(ISO7185UNIT) $(EXTPASUNIT) dos \
       wintypes winprocs win31 ports dynlibs $(SORTBASEUNIT) \
-      sysconst rtlconsts sysutils math types typinfo fgl \
-      classes $(CHARSETUNIT) cpu getopts cpall \
+      sysconst rtlconsts sysutils math types typinfo $(FGLUNIT) \
+      classes $(CHARSETUNIT) cpu getopts $(CPALLUNIT) \
       unicodedata character ctypes
 implicitunits=\
       cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
@@ -135,7 +135,7 @@ sysutils$(PPUEXT) : sysutils.pp $(wildcard $(OBJPASDIR)/sysutils/*.inc) \
 
 classes$(PPUEXT) : classes.pp $(wildcard $(OBJPASDIR)/classes/*.inc) \
                    sysutils$(PPUEXT) typinfo$(PPUEXT) rtlconsts$(PPUEXT) \
-                   types$(PPUEXT) fgl$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
+                   types$(PPUEXT) $(FGLUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
                    winprocs$(PPUEXT) wintypes$(PPUEXT) sortbase$(PPUEXT) system$(PPUEXT)
         $(COMPILER) -Fi$(OBJPASDIR)/classes classes.pp
 	$(EXECPPAS)
