--- a/rtl/nativent/Makefile.fpc
+++ b/rtl/nativent/Makefile.fpc
@@ -16,7 +16,7 @@ implicitunits=ndk ndkutils ddk \
       dos \
       rtlconsts sysconst sysutils math types \
       typinfo $(FGLUNIT) classes \
-      $(CPU_UNITS) $(CHARSETUNIT) getopts \
+      $(CPU_UNITS) $(CHARSETUNIT) $(GETOPTSUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) \
 #      sockets printer \
 #      keyboard
