--- a/rtl/win16/Makefile.fpc
+++ b/rtl/win16/Makefile.fpc
@@ -8,7 +8,7 @@ loaders=prt0s prt0m prt0c prt0l prt0h
 units=system $(UUCHARUNIT) $(OBJPASUNIT) $(STRINGSUNIT) $(ISO7185UNIT) $(EXTPASUNIT) dos \
       wintypes winprocs win31 ports dynlibs $(SORTBASEUNIT) \
       sysconst rtlconsts sysutils math types typinfo $(FGLUNIT) \
-      classes $(CHARSETUNIT) cpu getopts $(CPALLUNIT) \
+      classes $(CHARSETUNIT) cpu $(GETOPTSUNIT) $(CPALLUNIT) \
       unicodedata character ctypes
 implicitunits=\
       cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
@@ -165,10 +165,6 @@ rtlconsts$(PPUEXT) : $(OBJPASDIR)/rtlconsts.pp $(OBJPASDIR)/rtlconst.inc $(OBJPA
 #
 cpu$(PPUEXT) : $(PROCINC)/cpu.pp sysutils$(PPUEXT) system$(PPUEXT)
 	$(COMPILER) $(PROCINC)/cpu.pp
-	$(EXECPPAS)
-
-getopts$(PPUEXT) : $(INC)/getopts.pp system$(PPUEXT)
-        $(COMPILER) $(INC)/getopts.pp $(REDIR)
 	$(EXECPPAS)
 
 character$(PPUEXT): $(OBJPASDIR)/character.pas sysutils$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) rtlconsts$(PPUEXT) unicodedata$(PPUEXT) system$(PPUEXT)
